# poker-flop-potential-aware-abstraction

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
src/: earth_movers_distance.rs  load.rs  logger.rs  main.rs  save.rs
src/earth_movers_distance_approximation/: algorithm.rs  precomputation.rs
src/proto/: clustered_data_centroids.proto  hand_strength_histograms.proto  potential_aware_emd_matrix.proto
