[package]
name = "poker-flop-potential-aware-abstraction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
prost = "0.12.4"
prost-types = "0.12.4"
rayon = "1.10.0"

[build-dependencies]
prost-build = "0.12.4"

